-------------------------
(2010-03-12) version 1.1:

  * Added support for unit conversion.

-------------------------
(2010-03-10) version 1.0:

  * First public release.
