@@ -1,5 +1,5 @@
 =========================================================================
-| README for CCSS 1.1							|
+| README for CCSS 1.2							|
 |									|
 | Dario Teixeira (dario.teixeira@yahoo.com)				|
 | March 2010								|
